[workspace]
resolver = "3"
members = [
    "crates/azlin-core",
    "crates/azlin-azure",
    "crates/azlin-ai",
    "crates/azlin-cli",
    "crates/azlin-ssh",
    "crates/azlin",
]

[workspace.package]
version = "3.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Ryan Sweet <rysweet@microsoft.com>"]
license = "MIT"
description = "Azure VM fleet management CLI - Optimized & Refactored"
repository = "https://github.com/rysweet/azlin"

[workspace.dependencies]
# === ASYNC & PARALLEL ===
tokio = { version = "1", features = ["full", "rt-multi-thread", "sync", "macros", "time"] }
rayon = "1.10"
async-trait = "0.1"

# === CACHING ===
moka = { version = "0.12", features = ["future"] }
dashmap = "6"

# === SERIALIZATION ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
rkyv = { version = "0.7", features = ["validation"] }

# === CLI ===
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

# === TERMINAL UI ===
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
ratatui = "0.30"
crossterm = "0.29"

# === AZURE SDK ===
azure_identity = "0.22"
azure_core = "0.22"
azure_mgmt_compute = "0.2"
azure_mgmt_network = "0.2"
azure_mgmt_resources = "0.2"
azure_mgmt_storage = "0.2"
azure_security_keyvault_secrets = "0.2"
azure_mgmt_costmanagement = "0.2"

# === HTTP ===
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2", "gzip"] }
hyper = { version = "1", features = ["full"] }

# === ERROR HANDLING ===
anyhow = "1"
thiserror = "2"
color-eyre = "0.6"

# === LOGGING ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# === CRYPTO ===
sha2 = "0.10"
blake3 = "1"

# === PERFORMANCE ===
smallvec = { version = "1", features = ["union"] }
bytes = "1"
parking_lot = "0.12"

# === MISC ===
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
dirs = "6"
which = "7"
tempfile = "3"
shell-escape = "0.1"
shlex = "1"
russh = "0.49"
russh-keys = "0.49"
wait-timeout = "0.2"

# === TESTING ===
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"
proptest = "1"
futures = "0.3"

# === PROFILE: DEV ===
[profile.dev]
debug = "line-tables-only"
opt-level = 1
lto = "off"

# === PROFILE: DEV-FAST ===
[profile.dev-fast]
inherits = "dev"
opt-level = 2
debug = false

# === PROFILE: RELEASE ===
[profile.release]
strip = true
lto = "fat"
debug = false
codegen-units = 1
opt-level = 3
panic = "abort"

# === PROFILE: RELEASE-SMALL ===
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "thin"

# === BENCHMARK ===
[[bench]]
name = "benchmarks"
harness = false
