[package]
name = "azlin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, config, models, and utilities for azlin - Optimized v3"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
rkyv = { workspace = true }

# Async & Parallel
tokio = { workspace = true }
rayon = { workspace = true }
async-trait = { workspace = true }

# Caching
moka = { workspace = true }
dashmap = { workspace = true }

# Error & Logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Misc
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
smallvec = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
futures = "0.3"

[[bench]]
name = "benchmarks"
harness = false
